# valida_local_verifier

./: Cargo.toml  README.md
llvm-valida-alpha-mac-build/: LICENSE.TXT  valida.ld
llvm-valida-alpha-mac-build/examples/: cat.c  checksum.c  fib.c  merkle-path.c  reverse.c  sha256.c  sha256_32byte_in.c
llvm-valida-alpha-mac-build/output/: fib.out  fib.proof
src/: main.rs  valida.rs
